--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
         <div class="col-10 info-panel">
           <div class="row">
             <div class="col-sm">
-              <img src="img/employee.png" alt="Employee" class="img-fluid float-left">
+              <img src="img/Bandung_bagde.png" alt="Employee" class="img-fluid float-left">
               <h4>24 Hours</h4>
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
             <div class="col-lg">
-              <img src="img/hires.png" alt="HiRes" class="img-fluid float-left">
+              <img src="img/booscha.jpg" alt="HiRes" class="img-fluid float-left">
               <h4>High-Res</h4>
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
             <div class="col-lg">
-              <img src="img/security.png" alt="Security" class="img-fluid float-left">
+              <img src="img/coba.png" alt="Security" class="img-fluid float-left">
               <h4>Security</h4>
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
@@ -82,50 +82,177 @@
         </div>
         <div class="col-lg-5">
           <h2>You <span>Work</span> Like at <span>Home</span></h2>
-          <p>Bekerja dengan suasana hati yang lebih asik, menyenangkan
-            dan mempelajari hal baru setiap harinya.</p>
-          <a href="#" class="btn btn-danger tombol">Gallery</a>
-        </div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Halaman Profil Bandung</title>
+
+    <!-- My Own Styles -->
+    <link rel="stylesheet" href="styles/style.css" />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+    <header>
+      <div class="jumbotron">
+        <h1>Bandung</h1>
+        <p>
+          Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu kota provinsi
+          tersebut.
+        </p>
       </div>
-      <!-- akhir Workingspace -->
 
+      <nav>
+        <ul>
+          <li>
+            <a href="#sejarah">Sejarah</a>
+          </li>
+          <li>
+            <a href="#geografis">Geografis</a>
+          </li>
+          <li>
+            <a href="#wisata">Wisata</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-      <!-- Testimonial -->
-      <section class="testimonial">
-        <div class="row justify-content-center">
-          <div class="col-lg-8">
-            <p>"Bekerja dengan suasana hati yang lebih asik dan mempelajari hal baru setiap harinya."</p>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-lg-6 justify-content-center d-flex">
-            <img src="img/img1.png" alt="Testimonial 1">
-            <img src="img/img2.png" alt="Testimonial 2" class="img-main">
-            <img src="img/img3.png" alt="Testimonial 3">
-          </div>
-        </div>
-        <div class="row justify-content-center info-text">
-          <div class="col-lg text-center">
-            <h5>Sunny Ye</h5>
-            <p>Designer</p>
-          </div>
-        </div>
-      </section>
-      <!-- akhir Testimonial -->
+    <main>
+      <!-- Konten artikel -->
+      <div id="content">
+        <article id="sejarah" class="card">
+          <h2>Sejarah</h2>
+          <img src="image/history.jpg" alt="sejarah" class="featured-image" />
+          <p>
+            Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya sungai
+            Citarum oleh lava Gunung Tangkuban Parahu yang lalu membentuk telaga. Legenda yang
+            diceritakan oleh orang-orang tua di Bandung mengatakan bahwa nama Bandung diambil dari
+            sebuah kendaraan air yang terdiri dari dua perahu yang diikat berdampingan yang disebut
+            perahu bandung yang digunakan oleh Bupati Bandung, R.A. Wiranatakusumah II, untuk
+            melayari Ci Tarum dalam mencari tempat kedudukan kabupaten yang baru untuk menggantikan
+            ibu kota yang lama di Dayeuhkolot.
+          </p>
 
+          <p>
+            Berdasarkan filosofi Sunda, kata Bandung juga berasal dari kalimat Nga-Bandung-an Banda
+            Indung, yang merupakan kalimat sakral dan luhur karena mengandung nilai ajaran Sunda.
+            Nga-Bandung-an artinya menyaksikan atau bersaksi. Banda adalah segala sesuatu yang
+            berada di alam hidup yaitu di bumi dan atmosfer, baik makhluk hidup maupun benda mati.
+            Sinonim dari banda adalah harta. Indung berarti Ibu atau Bumi, disebut juga sebagai Ibu
+            Pertiwi tempat Banda berada.
+          </p>
+        </article>
 
-    </div>
-    <!-- akhir container -->
+        <article id="geografis" class="card">
+          <h2>Geografis</h2>
+          <img src="image/geografis.jpg" alt="geografis" class="featured-image" />
+          <p>
+            Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi wilayahnya bagaikan
+            sebuah mangkok raksasa,[9] secara geografis kota ini terletak di tengah-tengah provinsi
+            Jawa Barat, serta berada pada ketinggian ±768 m di atas permukaan laut, dengan titik
+            tertinggi di berada di sebelah utara dengan ketinggian 1.050 meter di atas permukaan
+            laut dan sebelah selatan merupakan kawasan rendah dengan ketinggian 675 meter di atas
+            permukaan laut.
+          </p>
 
+          <p>
+            Kota Bandung dialiri dua sungai utama, yaitu Sungai Cikapundung dan Sungai Citarum
+            beserta anak-anak sungainya yang pada umumnya mengalir ke arah selatan dan bertemu di
+            Sungai Citarum. Dengan kondisi yang demikian, Bandung selatan sangat rentan terhadap
+            masalah banjir terutama pada musim hujan.
+          </p>
+        </article>
 
+        <article id="wisata" class="card">
+          <h2>Wisata</h2>
+          <p>
+            Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan utama dalam
+            menikmati liburan akhir pekan terutama dari masyarakat yang berasal dari Jakarta
+            sekitarnya. Selain menjadi kota wisata belanja, kota Bandung juga dikenal dengan
+            sejumlah besar bangunan lama berarsitektur peninggalan Belanda.
+          </p>
 
+          <section>
+            <h3>Farm House Lembang</h3>
+            <img src="image/farm-house.jpg" alt="farm house" class="featured-image" />
+            <p>
+              Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata yang tidak
+              pernah sepi pengunjung. Selain karena letaknya strategis, kawasan ini juga
+              menghadirkan nuansa wisata khas Eropa. Semua itu diterapkan dalam bentuk spot swafoto
+              Instagramable.
+            </p>
+          </section>
 
-    
+          <section>
+            <h3>Observatorium Bosscha</h3>
+            <img src="image/bosscha.jpg" alt="bosscha" class="featured-image" />
+            <p>
+              Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt Bimasakti,
+              Refraktor Bamberg, Cassegrain GOTO, dan Teleskop Surya. Refraktor Ganda Zeiss adalah
+              jenis teleskop terbesar untuk meneropong bintang. Benda ini diletakkan pada atap kubah
+              sehingga saat teropong digunakan, atap tersebut harus dibuka. Observatorium Bosscha
+              boleh dikunjungi oleh siapapun, tanpa tiket. Namun, bagi yang ingin menggunakan
+              teleskop Zeiss, wajib mendaftarkan diri. Untuk instansi atau lembaga pendidikan,
+              diberikan jadwal hari Selasa sampai Jumat. Sementara itu, kunjungan individu dibuka
+              setiap hari Sabtu.
+            </p>
+          </section>
+        </article>
+      </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+      <!-- Konten samping -->
+      <aside>
+        <article class="profile card">
+          <header>
+            <h2>Kota Bandung</h2>
+            <p>Kota Kembang Paris van Java</p>
+            <figure>
+              <img src="image/bandung-badge.png" />
+              <figcaption>Lambang</figcaption>
+            </figure>
+          </header>
+
+          <section>
+            <h3>Informasi Lainnya</h3>
+
+            <table>
+              <tr>
+                <th>Negara</th>
+                <td>Indonesia</td>
+              </tr>
+              <tr>
+                <th>Hari jadi</th>
+                <td>25 September 1810</td>
+              </tr>
+              <tr>
+                <th>Luas Total</th>
+                <td>167.67 km<sup>2</sup></td>
+              </tr>
+              <tr>
+                <th>Bahasa Daerah</th>
+                <td>Sunda</td>
+              </tr>
+              <tr>
+                <th>Kode Telepon</th>
+                <td>+62 22</td>
+              </tr>
+            </table>
+          </section>
+        </article>
+      </aside>
+    </main>
+
+    <footer>
+      <p>Belajar Dasar Pemrograman Web &#169; 2019, Dicoding Academy</p>
+    </footer>
   </body>
 </html>
