--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <h2>Kota Bandung</h2>
             <p>Kota Kembang Paris van Java</p>
             <figure>
-              <img src="image/bandung_badge.png" />
+              <img src="image/Bandung_badge.png" />
               <figcaption>Lambang</figcaption>
             </figure>
           </header>
