--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
             <h2>Kota Bandung</h2>
             <p>Kota Kembang Paris van Java</p>
             <figure>
-              <img src="image/Bandung_badge.png" />
-
+              <img src="image/bandung-badge.png" />
+              <figcaption>Lambang</figcaption>
             </figure>
           </header>
 
